modified css for diasbled buttons

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,9 @@ code {
   white-space: nowrap;
   overflow: hidden;
 }
+
+button:disabled {
+  background-color: lightgray !important;
+  color: black !important;
+  border-color: darkgray !important;
+}
